[package]
name = "fcosv1"
version = "0.1.0"
edition = "2021"
authors = ["Yuan Cao <cao.yuan1@northeastern.edu>"]

[lib]
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
